Dev dcrd, intro, anns

--- a/journal/202102.md
+++ b/journal/202102.md
@@ -6,6 +6,22 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 { introduction, major news of the month ordered by impact, don't put any links here }
 
+- { 1.6.1 }
+- { pos and pow upgraded, vote locked in }
+- { props approved }
+
+## Release 1.6.1
+
+{ remind to verify }
+
+https://github.com/decred/decred-binaries/releases/tag/v1.6.1
+
+## Upcoming Consensus Change
+
+{ prepare to vote }
+
+https://voting.decred.org/
+
 ## Development
 
 The work reported below has the "merged to master" status unless noted otherwise. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
@@ -14,9 +30,21 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 **[dcrd](https://github.com/decred/dcrd)**
 
-- {}
+Month's highlight is the addition of [UTXO cache](https://github.com/decred/dcrd/pull/2591) that cuts initial blockchain download (IBD) time by ~33% at the cost of some extra memory usage.
 
-ABPF useful for other projects https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$ulmCeMPuDSSmt3KTB09fJpypa4fpooFILTXKtQNWUCg
+Another highlight is the [introduction](https://github.com/decred/dcrd/pull/2579) of Age-Partioned Bloom Filters (APBF). APBF is a lookup device that can quickly tell if it contains an element. It can track _lot_ of data while using little memory, at the cost of a controlled rate of false positives. Unlike classic Bloom filters, it can handle unbounded amount of data by aging and discarding old items. The motivation for adding ABPFs to Decred is to replace the LRU (least recently used) cache used to continuously track what data other peers are known to have. A benchmark of one use case indicated a reduction of memory use from ~200 to ~5 MiB. `apbf` package will be [useful](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$ulmCeMPuDSSmt3KTB09fJpypa4fpooFILTXKtQNWUCg) for other projects like wallet, DEX, mobile wallets, etc. Read the details in full glory in the [PR](https://github.com/decred/dcrd/pull/2579) and the [README](https://github.com/decred/dcrd/tree/master/container/apbf). { is it too much of an intro? it's just too exciting and hard to not sing about }
+
+Other merged work:
+
+- primary filter operations in `abpf` package made more than twice [faster](https://github.com/decred/dcrd/pull/2584) with smart bit-level math
+- tracking of recently [confirmed](https://github.com/decred/dcrd/pull/2580) transactions and [addresses](https://github.com/decred/dcrd/pull/2583) known by peers switched to use ABPFs for a ~97% reduction in memory use
+- tracking or recently [rejected](https://github.com/decred/dcrd/pull/2590) tx also switched to ABPFs, with extra benefits of lowering bandwidth usage in high rejection scenarios while simultaneously increasing robustness against malicious peers
+- `reject` message [deprecated](https://github.com/decred/dcrd/pull/2586) towards its eventual removal in future versions (read [this](https://github.com/decred/dcrd/issues/2546) for a list of privacy and correctness issues with this message)
+
+These two changes merged in both master and the v1.6.1 patch release:
+
+- notification logic [modified](https://github.com/decred/dcrd/pull/2597) to force proof-of-work miners to upgrade so that voting on the new consensus changes can commence
+- fixed a rare [issue](https://github.com/decred/dcrd/pull/2582) where connections might not be reestablished after a network outage
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
