--- a/journal/202102.md
+++ b/journal/202102.md
@@ -48,7 +48,17 @@ These two changes merged in both master and the v1.6.1 patch release:
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
-- {}
+Merged in both master and v1.6.1 release:
+
+- new method to set ticket [vote choice](https://github.com/decred/dcrwallet/pull/1981) at the associated VSP via the new vspd protocol (used by Decrediton)
+- when the account only has a single output, create an extra transaction to make enough [outputs](https://github.com/decred/dcrwallet/pull/1980) for a VSP ticket purchase, and use the resulting [fee](https://github.com/decred/dcrwallet/pull/2005) output (fixes the "not enough utxos" [error](https://www.reddit.com/r/decred/comments/lebx71/error_when_trying_to_purchase_tickets_with/))
+- skip [unpublished](https://github.com/decred/dcrwallet/pull/1985) transactions when selecting outputs and clear unpublished status when the tx is mined (fixes certain double spend cases)
+- return [error](https://github.com/decred/dcrwallet/pull/1990) from `signrawtransaction` if the transaction has no inputs
+- save [mixed](https://github.com/decred/dcrwallet/pull/1989) output transactions and watch outputs
+- consider [tx fees](https://github.com/decred/dcrwallet/pull/1992) when choosing a mix amount and count to avoid unmixable outputs
+- fixed unpublished transactions' outputs being included in the [spendable](https://github.com/decred/dcrwallet/pull/2002) balance
+- fixed a chance to pay a very [high fee](https://github.com/decred/dcrwallet/pull/2002) during mixing (this was a regression between v1.6.0 and v1.6.1, i.e. did not affect any release)
+- updated salsa20 and blake2b [dependencies](https://github.com/decred/dcrwallet/pull/1998) to prevent possible memory corruption
 
 **[dcrctl](https://github.com/decred/dcrctl)**
 
