--- a/journal/202102.md
+++ b/journal/202102.md
@@ -99,17 +99,11 @@ CMS:
 
 { not found any Feb PRs or commits in the `politeia` repo, lmk if there is any update }
 
-**[vspd](https://github.com/decred/vspd)**
-
-- {}
-
-**[dcrstakepool](https://github.com/decred/dcrstakepool)**
-
-- {}
-
 **[dcrpool](https://github.com/decred/dcrpool)**
 
-- {}
+- support for [reverse proxy](https://github.com/decred/dcrpool/pull/301) deployments
+- various improvements for the [Stratum](https://github.com/decred/dcrpool/pull/304) mining protocol
+- fixed hash calculation spanning multiple [cycles](https://github.com/decred/dcrpool/pull/305)
 
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
