Dev dcrlnd, cspp

--- a/journal/202102.md
+++ b/journal/202102.md
@@ -107,11 +107,13 @@ CMS:
 
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
-- {}
+- check that correct wallet account is used when [unlocking](https://github.com/decred/dcrlnd/pull/106) (this allows to present a meaningful message in Decrediton)
 
 **[cspp](https://github.com/decred/cspp)**
 
-- {}
+- validate that clients pay enough transaction [fees](https://github.com/decred/cspp/pull/58) (and close a DoS vector)
+- remove [timed-out](https://github.com/decred/cspp/pull/60) clients to prevent possible server hangs
+- isolate state for different [runs](https://github.com/decred/cspp/pull/61) to prevent possible aborted mixes
 
 **[dcrdex](https://github.com/decred/dcrdex)**
 
@@ -173,7 +175,7 @@ Other:
 
 { hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
 
-Welcome to new first time contributors with code merged to master: @fintechtrades ([dcrdocs](https://github.com/decred/dcrdocs/pull/1150)).
+Welcome to new first time contributors with code merged to master: @bochinchero ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=bochinchero)) and @fintechtrades ([dcrdocs](https://github.com/decred/dcrdocs/pull/1150))!
 
 
 Community stats as of {date}:
