--- a/journal/202102.md
+++ b/journal/202102.md
@@ -154,7 +154,11 @@ You can track what's coming on the milestone pages for [0.2](https://github.com/
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
-- {}
+- added [Security Tools](https://github.com/planetdecred/godcr/pull/299) page UI and [logic](https://github.com/planetdecred/godcr/pull/315) for Verify Message and Validate Address tools
+- implemented logic for [Settings](https://github.com/planetdecred/godcr/pull/307) page
+- implemented [vspd](https://github.com/planetdecred/godcr/pull/263) staking support
+- implemented StakeShuffle account [mixing](https://github.com/planetdecred/godcr/pull/312)
+- implemented [watch-only](https://github.com/planetdecred/godcr/pull/318) wallet import
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
