--- a/journal/202102.md
+++ b/journal/202102.md
@@ -160,17 +160,10 @@ You can track what's coming on the milestone pages for [0.2](https://github.com/
 - implemented StakeShuffle account [mixing](https://github.com/planetdecred/godcr/pull/312)
 - implemented [watch-only](https://github.com/planetdecred/godcr/pull/318) wallet import
 
-**[dcrdata](https://github.com/decred/dcrdata)**
-
-- {}
-
-**[tinydecred](https://github.com/decred/tinydecred)**
-
-- {}
-
 **[dcrros](https://github.com/decred/dcrros)**
 
-- {}
+- [updated](https://github.com/decred/dcrros/pull/19) to comply with the Rosetta spec version 1.4.10
+- added a full end-to-end [test suite](https://github.com/decred/dcrros/pull/18) to assert correct dcrros behavior, including running the required Data and Construction API tests on a local simnet that exercises a large number of situations actually found on chain
 
 **[docs](https://github.com/decred/dcrdocs)**
 
