--- a/journal/202102.md
+++ b/journal/202102.md
@@ -169,19 +169,21 @@ You can track what's coming on the milestone pages for [0.2](https://github.com/
 
 - CLI [Buying Tickets](https://docs.decred.org/wallets/cli/dcrwallet-tickets/) page [updated](https://github.com/decred/dcrdocs/pull/1148) with steps for v1.6
 
-{ check if anything interesting happened in the other repos under
+**Kohola**
 
-- https://github.com/decred
-- https://github.com/planetdecred
-- https://github.com/raedahgroup
+@peter\_zen [shared](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$uc4-7jDq7LehB55bK3sAjq9qL-g2WDJ8wOW5HZTvknI):
 
-}
+
+> Announcing a project I and @bgptr have been working on last year: https://github.com/peterzen/kohola
+> 
+> Kohola is a dcrwallet frontend I started for my own needs which weren't covered by Decrediton. It's not feature complete yet but I've been using it as my production wallet. Work on it stalled some months ago due to other priorities but I thought I'd share it in its present state as other peeps may find it useful. In case it proves some usefulness it would be great to finish it.
+
+According to the GitHub [repo](https://github.com/peterzen/kohola), Kohola wallet is intended for expert users and offers features like encrypted configuration, solo staking support, coin control, and labelling coins to keep track of user's own privacy { clarify what works }. The app is written in Go and TypeScript using React and Redux frameworks. Importantly, Kohola means "whale" in Hawaiian.
 
 Other:
 
-- Kohola https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$uc4-7jDq7LehB55bK3sAjq9qL-g2WDJ8wOW5HZTvknI
-- ticket ntfn script https://matrix.to/#/!uCnoeYfbhUnvwWihzS:decred.org/$oB6ylGDjPyuCNa_0mH9VwLya_55b8JQiS0zoObMoTmY?via=zettaport.com&via=decred.org
-- a number of project is now building and testing with Go 1.16
+- @dezryth shared a Python [program](https://github.com/dezryth/VotedTicketNotifier) that will send push notifications to your mobile device when your tickets vote
+- most projects are now building and testing with Go 1.16
 
 ## People
 
