Dev polish dcrwallet, decrediton

--- a/journal/202102.md
+++ b/journal/202102.md
@@ -48,32 +48,32 @@ Other merged work:
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
-Merged in both master and v1.6.1 release:
+Changes merged and released with v1.6.1 patch:
 
-- new method to set ticket [vote choice](https://github.com/decred/dcrwallet/pull/1981) at the associated VSP via the new vspd protocol (used by Decrediton)
+- new gRPC method to set ticket [vote choice](https://github.com/decred/dcrwallet/pull/1981) at the associated VSP via the new vspd protocol (used by Decrediton)
 - when the account only has a single output, create an extra transaction to make enough [outputs](https://github.com/decred/dcrwallet/pull/1980) for a VSP ticket purchase, and use the resulting [fee](https://github.com/decred/dcrwallet/pull/2005) output (fixes the "not enough utxos" [error](https://www.reddit.com/r/decred/comments/lebx71/error_when_trying_to_purchase_tickets_with/))
 - skip [unpublished](https://github.com/decred/dcrwallet/pull/1985) transactions when selecting outputs and clear unpublished status when the tx is mined (fixes certain double spend cases)
-- return [error](https://github.com/decred/dcrwallet/pull/1990) from `signrawtransaction` if the transaction has no inputs
-- save [mixed](https://github.com/decred/dcrwallet/pull/1989) output transactions and watch outputs
-- consider [tx fees](https://github.com/decred/dcrwallet/pull/1992) when choosing a mix amount and count to avoid unmixable outputs
-- fixed unpublished transactions' outputs being included in the [spendable](https://github.com/decred/dcrwallet/pull/2002) balance
+- consider [tx fees](https://github.com/decred/dcrwallet/pull/1992) when mixing to avoid unmixable outputs
+- fixed outputs from unpublished transactions being included in the [spendable](https://github.com/decred/dcrwallet/pull/2002) balance
 - fixed a chance to pay a very [high fee](https://github.com/decred/dcrwallet/pull/2002) during mixing (this was a regression between v1.6.0 and v1.6.1, i.e. did not affect any release)
 - updated salsa20 and blake2b [dependencies](https://github.com/decred/dcrwallet/pull/1998) to prevent possible memory corruption
+- return [error](https://github.com/decred/dcrwallet/pull/1990) from `signrawtransaction` if the transaction has no inputs
+- save [mixed](https://github.com/decred/dcrwallet/pull/1989) output transactions and watch outputs
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
-Merged in master and included in v1.6.1 release:
+Changes released with v1.6.1 patch:
 
-- setting consensus [vote choice](https://github.com/decred/decrediton/pull/3200) implemented for vspd tickets
-- [disable](https://github.com/decred/decrediton/pull/3231) some actions while mixer, auto-buyer or ticket purchases are running to avoid possible issues
+- setting consensus vote [choice](https://github.com/decred/decrediton/pull/3200) implemented for vspd tickets
+- [disable](https://github.com/decred/decrediton/pull/3231) some buttons while mixer, auto-buyer or ticket purchases are running to avoid possible issues
 - add [sanity](https://github.com/decred/decrediton/pull/3230) checks for ticket purchasing to prevent malformed legacy VSP tickets
 - support for filtering transactions by multiple [criteria](https://github.com/decred/decrediton/pull/3194)
 - improved layout of [staking stats](https://github.com/decred/decrediton/pull/3205) and [tx history](https://github.com/decred/decrediton/pull/3195) on small screens
 - show different icons for mixed and unmixed [accounts](https://github.com/decred/decrediton/pull/3225)
-- add a meaningful [message](https://github.com/decred/decrediton/pull/3252) explaining why sometimes fewer tickets are purchased than requested
+- added a meaningful [message](https://github.com/decred/decrediton/pull/3252) explaining why sometimes fewer tickets are purchased than requested
 - show a [timeout](https://github.com/decred/decrediton/pull/3199) error when not receiving VSP status response within 5 seconds
 - show [unconfirmed](https://github.com/decred/decrediton/pull/3254) balances on Overview and Accounts
-- disable ticket [auto-buying](https://github.com/decred/decrediton/pull/3182) when switching between legacy and vspd modes to prevent unexpected purchases
+- disable the [auto-buyer](https://github.com/decred/decrediton/pull/3182) when switching between legacy and vspd modes to prevent unexpected ticket purchases
 - better [names](https://github.com/decred/decrediton/pull/3219) for tabs and labels
 - added Traditional Chinese [translation](https://github.com/decred/decrediton/pull/3086)
 - continued migration to functional components using hooks and CSS modules
@@ -85,7 +85,7 @@ Merged in master:
 - migrated to [grpc-js](https://github.com/decred/decrediton/pull/2936) dependency to reduce build time and binary size { isn't it included in v1.6.1? }
 - apply [language](https://github.com/decred/decrediton/pull/3134) change to menu bar and context menu without restarting Decrediton
 - fixed [CPU-hungry](https://github.com/decred/decrediton/pull/3123) animations on Privacy pages
-- 3 bug fixes
+- 3 other bug fixes
 
 **[Politeia](https://github.com/decred/politeia)**
 
