Dev polish rest

--- a/journal/202102.md
+++ b/journal/202102.md
@@ -117,25 +117,25 @@ CMS:
 
 **[dcrdex](https://github.com/decred/dcrdex)**
 
-v0.1.5 release is out, fixing several rough edges. Get the release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.6.1#dcrdex-v015), or grab [dcrinstall](https://github.com/decred/decred-release/releases) and run `dcrinstall --dcrdex`, and it will download, verify and configure everything for you. [Verify](https://docs.decred.org/advanced/verifying-binaries/) the initial download to ensure it came unmodified.
-
-Merged in master and the v0.1.5 patch release:
+Patch v0.1.5 has been released to fix a few rough edges:
 
 - handle orders that somehow [lose](https://github.com/decred/dcrdex/pull/967) their funding coins
 - make client init and redeem requests [asynchronous](https://github.com/decred/dcrdex/pull/911) to not block actions that could occur in parallel
 - retry contract audits when [resuming](https://github.com/decred/dcrdex/pull/965) trades on startup and login, to prevent mathces from being incorrectly revoked
 - blake2 dependency [updated](https://github.com/decred/dcrdex/pull/982) to prevent silent memory corruption
 
+Get the release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.6.1#dcrdex-v015), or grab [dcrinstall](https://github.com/decred/decred-release/releases) and run `dcrinstall --dcrdex` to download, verify and configure stuff automatically. [Verify](https://docs.decred.org/advanced/verifying-binaries/) the initial download though, to ensure it came unmodified.
+
 { how long v0.1 will be supported? }
 
-Merged in master towards v0.2 release:
+Merged in master towards the v0.2 release:
 
 - [estimate](https://github.com/decred/dcrdex/pull/958) low, high and max possible fees during swap and redemption transactions to offer some additional clarity on fees instead of just showing the worst-case value
 - write a [backup](https://github.com/decred/dcrdex/pull/949) file prior to upgrading the database
 - switch client from btcsuite's to Decred's [rpcclient](https://github.com/decred/dcrdex/pull/938) because the latter [supports](https://github.com/decred/dcrdex/issues/841) request cancellation
 - move wallet locking code during [shutdown](https://github.com/decred/dcrdex/pull/928) to a better place
 
-You can track what's coming on the milestone pages for [0.2](https://github.com/decred/dcrdex/milestone/6) (server market data, UI+backend improvements) and [0.3](https://github.com/decred/dcrdex/milestone/12) (SPV, BCH, Decred 1.7).
+You can track what's coming on the milestone pages for [0.2](https://github.com/decred/dcrdex/milestone/6) (server market data, UI+backend improvements) and [0.3](https://github.com/decred/dcrdex/milestone/12) (SPV support, BCH pair, Decred 1.7).
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
@@ -148,12 +148,12 @@ You can track what's coming on the milestone pages for [0.2](https://github.com/
 **[dcrios](https://github.com/planetdecred/dcrios)**
 
 - allow users to create [watch-only](https://github.com/planetdecred/dcrios/pull/734) wallet from the splash screen (without creating a new wallet first)
-- debug page to view the connected [peers'](https://github.com/planetdecred/dcrios/pull/730) details
+- added debug page to view the connected [peers'](https://github.com/planetdecred/dcrios/pull/730) details
 - UI and translation tweaks
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
-- added [Security Tools](https://github.com/planetdecred/godcr/pull/299) page UI and [logic](https://github.com/planetdecred/godcr/pull/315) for Verify Message and Validate Address tools
+- added [Security Tools](https://github.com/planetdecred/godcr/pull/299) UI and [logic](https://github.com/planetdecred/godcr/pull/315) for Verify Message and Validate Address tools
 - implemented logic for [Settings](https://github.com/planetdecred/godcr/pull/307) page
 - implemented [vspd](https://github.com/planetdecred/godcr/pull/263) staking support
 - implemented StakeShuffle account [mixing](https://github.com/planetdecred/godcr/pull/312)
@@ -177,7 +177,7 @@ You can track what's coming on the milestone pages for [0.2](https://github.com/
 > 
 > Kohola is a dcrwallet frontend I started for my own needs which weren't covered by Decrediton. It's not feature complete yet but I've been using it as my production wallet. Work on it stalled some months ago due to other priorities but I thought I'd share it in its present state as other peeps may find it useful. In case it proves some usefulness it would be great to finish it.
 
-According to the GitHub [repo](https://github.com/peterzen/kohola), Kohola wallet is intended for expert users and offers features like encrypted configuration, solo staking support, coin control, and labelling coins to keep track of user's own privacy { clarify what works }. The app is written in Go and TypeScript using React and Redux frameworks. Importantly, Kohola means "whale" in Hawaiian.
+According to the GitHub [repo](https://github.com/peterzen/kohola), this wallet is intended for expert users and offers features like encrypted configuration, solo staking support, coin control, and labelling coins to keep track of user's own privacy { clarify what works }. The app is written in Go and TypeScript using React and Redux frameworks. Importantly, Kohola means "whale" in Hawaiian.
 
 Other:
 
@@ -186,10 +186,7 @@ Other:
 
 ## People
 
-{ hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
-
 Welcome to new first time contributors with code merged to master: @bochinchero ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=bochinchero)) and @fintechtrades ([dcrdocs](https://github.com/decred/dcrdocs/pull/1150))!
-
 
 Community stats as of {date}:
 
