--- a/journal/202102.md
+++ b/journal/202102.md
@@ -188,17 +188,16 @@ Other:
 
 Welcome to new first time contributors with code merged to master: @bochinchero ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=bochinchero)) and @fintechtrades ([dcrdocs](https://github.com/decred/dcrdocs/pull/1150))!
 
-Community stats as of {date}:
+Community stats as of Mar 1:
 
-- Politeia users: {} (+{})
-- [Twitter](https://twitter.com/decredproject) followers: {} (+{})
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: {} (+{})
-- [Matrix](https://chat.decred.org/) #general users: {} (+{})
-- [Discord](https://discord.gg/GJ2GXfz) users: {}, verified to post: {}
-- [Telegram](https://t.me/Decred) users: {} (+{})
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: {} (+{}), views: {} (+{})
-- [LinkedIn](https://www.linkedin.com/company/decredproject) followers: {} (+{})
-- GitHub [dcrd](https://github.com/decred/dcrd) stars: {} (+{}), forks: {} (+{})
+- [Twitter](https://twitter.com/decredproject) followers: 42,922 (+1,121)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 10,559 (+358)
+- [Matrix](https://chat.decred.org/) #general users: 382 (+38)
+- [Discord](https://discord.gg/GJ2GXfz) users: 1,444 (-473) - pruned inactive users
+- [Telegram](https://t.me/Decred) users: 2,518 (+90)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,420 (+100), views: 175K (+6K)
+- [LinkedIn](https://www.linkedin.com/company/decredproject) followers: 978 (+16)
+- GitHub [dcrd](https://github.com/decred/dcrd) stars: 584 (+9), forks: 252 (+3)
 
 ## Governance
 
