--- a/journal/202102.md
+++ b/journal/202102.md
@@ -205,6 +205,7 @@ Notable changes detected for the [tracked](https://github.com/decredcommunity/so
 - [CoinMarketCap](https://coinmarketcap.com/currencies/decred/) page got another +3K watchers to 29K
 - [DecredKorea](https://twitter.com/DecredKorea) and [DecredNederland](https://twitter.com/DecredNederland) Twitter accounts have emerged in Jan and started tweeting in Korean and Dutch
 - [@Checkmate](https://twitter.com/_Checkmatey_) gained +30% followers (to 5K) and posted 1.2K tweets at a crazy rate of ~41/day
+- [ConsensusRough](https://twitter.com/ConsensusRough) Twitter got +18% followers, to 438
 
 ## Governance
 
@@ -274,7 +275,9 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Outreach
 
-{ overview of outreach/communications/marketing/PR activity for past month and any short-term plans }
+https://www.reddit.com/r/CryptoCurrency/comments/lqlone/decred_ama_ask_us_about_privacy_daos_lightning/
+
+{ #Decred5Years }
 
 Monde PR’s achievements for February:
 
@@ -321,12 +324,13 @@ Art and fun:
 - https://twitter.com/RichardRed0x/status/1356719226724220930
 - https://www.reddit.com/r/decred/comments/lfxqef/the_rewards/
 - https://twitter.com/LolekBolek74/status/1359866192538787843
+- irresistible https://twitter.com/Decred_ES/status/1358855083396653062
 
-{ another pic is due }
+{ another food pic is due }
 
 Translations:
 
-- {}
+- { ES YT translations }
 
 Other non-English content:
 
@@ -336,6 +340,7 @@ Other non-English content:
 
 Comm systems news:
 
+- there has been an uptick in attempts to scam people. Please be aware that legit team members will never DM you with offers of free money or technical assistance. Pay close attention to user name and ID you chat with and tell your friends to stay vigilant, too.
 - new ways to impersonate in Matrix, pay attention https://twitter.com/GrapheneOS/status/1365881076229488641
 
 { selected discussed topics, as bullet list or one paragraph per topic }
@@ -371,6 +376,10 @@ Yearn Finance was February's largest DeFi [Fail](https://cryptobriefing.com/hack
 Yearn Finance is also [changing](https://gov.yearn.finance/t/yip-56-buyback-and-build/8929) up its Treasury and governance funding model [significantly](https://gov.yearn.finance/t/yip-56-buyback-and-build/8929), major changes include scrapping YFI staking because of its uncompetitive yield and instead switching to a buyback model and allowing YFI holders who have deployed their tokens in a liquidity pool to also use them to vote. 
 
 Bitcoin developers are in the [process](https://twitter.com/AndreCronjeTech/status/1359934584612212738) of deciding how the [Taproot](https://bitcoinmagazine.com/technical/taproot-coming-what-it-and-how-it-will-benefit-bitcoin) upgrade should be activated, with the point of contention being whether the Bitcoin Core update should ship with a setting that has it activating at the end of the signalling period regardless of whether the supermajority threshold is met (like the User Activated Soft Fork) or take a more cautious approach and avoid forcing the issue initially. Miner signalling for the month to Mar 2 showed 89% support for Taproot from pools according to their hashrate.
+
+{ BTC Taproot fans have to survey mining pools and rely on tweets to measure sentiment https://taprootactivation.com/ }
+
+ProgPoW tension https://twitter.com/_Checkmatey_/status/1366831390424068098
 
 The New York Attorney General reached a [settlement](https://www.reuters.com/article/new-york-ifinex-settlement/bitfinex-tether-owner-pays-18-5-mln-fine-to-settle-nyag-cryptocurrency-cover-up-charges-idUSL1N2KT16E) on charges against Tether and Bitfinex which saw the company pay $18.5 million fine but avoid having to admit to any wrongdoing.
 
