fix APBF acronym

--- a/journal/202102.md
+++ b/journal/202102.md
@@ -37,13 +37,13 @@ The v1.6.1 patch release included the following changes:
 
 In development towards the next release, this month's highlight is the addition of a [UTXO cache](https://github.com/decred/dcrd/pull/2591) that cuts initial blockchain download (IBD) time by ~33% at the cost of some extra memory. It also significantly speeds up block processing during normal operation and reduces the wear and tear on the storage medium by allowing entries that are created and spent between flushing intervals to avoid being written at all. UTXO cache is a required step towards [multi-peer](https://github.com/decred/dcrd/issues/1145) parallel block downloading.
 
-Another highlight is the [introduction](https://github.com/decred/dcrd/pull/2579) of Age-Partitioned Bloom Filters. APBF is a lookup device that can quickly tell if it contains an element. It can track _a lot_ of data while using little memory, at the cost of a controlled rate of false positives. Unlike classic Bloom filters, it can handle an unbounded amount of data by aging and discarding old items. The motivation for adding ABPFs to Decred is to replace the LRU (least recently used) cache used to continuously track what data other peers are known to have. For a concrete example, the memory to track addresses known by 125 peers is reduced from ~200 to ~5 MiB when using ABPFs. Also, the package will be [useful](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$ulmCeMPuDSSmt3KTB09fJpypa4fpooFILTXKtQNWUCg) for other projects like wallet, DEX, mobile wallets, etc. Read the details in full glory in the [PR](https://github.com/decred/dcrd/pull/2579) and the [README](https://github.com/decred/dcrd/tree/master/container/apbf).
+Another highlight is the [introduction](https://github.com/decred/dcrd/pull/2579) of Age-Partitioned Bloom Filters. APBF is a lookup device that can quickly tell if it contains an element. It can track _a lot_ of data while using little memory, at the cost of a controlled rate of false positives. Unlike classic Bloom filters, it can handle an unbounded amount of data by aging and discarding old items. The motivation for adding APBFs to Decred is to replace the LRU (least recently used) cache used to continuously track what data other peers are known to have. For a concrete example, the memory to track addresses known by 125 peers is reduced from ~200 to ~5 MiB when using APBFs. Also, the package will be [useful](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$ulmCeMPuDSSmt3KTB09fJpypa4fpooFILTXKtQNWUCg) for other projects like wallet, DEX, mobile wallets, etc. Read the details in full glory in the [PR](https://github.com/decred/dcrd/pull/2579) and the [README](https://github.com/decred/dcrd/tree/master/container/apbf).
 
 Other merged work:
 
-- primary operations in `abpf` package made more than two times [faster](https://github.com/decred/dcrd/pull/2584) with smart bit-level math
-- tracking of recently [confirmed](https://github.com/decred/dcrd/pull/2580) transactions and [addresses](https://github.com/decred/dcrd/pull/2583) known by peers switched to use ABPFs
-- tracking or recently [rejected](https://github.com/decred/dcrd/pull/2590) tx also switched to ABPFs, with extra benefits of lowering bandwidth usage in high rejection scenarios while simultaneously increasing robustness against malicious peers
+- primary operations in `apbf` package made more than two times [faster](https://github.com/decred/dcrd/pull/2584) with smart bit-level math
+- tracking of recently [confirmed](https://github.com/decred/dcrd/pull/2580) transactions and [addresses](https://github.com/decred/dcrd/pull/2583) known by peers switched to use APBFs
+- tracking or recently [rejected](https://github.com/decred/dcrd/pull/2590) tx also switched to APBFs, with extra benefits of lowering bandwidth usage in high rejection scenarios while simultaneously increasing robustness against malicious peers
 - `reject` message [deprecated](https://github.com/decred/dcrd/pull/2586) towards its eventual removal in future versions (read [this](https://github.com/decred/dcrd/issues/2546) for a list of privacy and correctness issues with this message)
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
@@ -410,6 +410,6 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
-- reviews and feedback: davecgh
+- reviews and feedback: davecgh, jholdstock
 - title image: {}
 - funding: Decred stakeholders
