--- a/journal/202102.md
+++ b/journal/202102.md
@@ -48,7 +48,8 @@ Other merged work:
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
-Changes merged and released with v1.6.1 patch:
+Changes merged and rel
+The Journal finally has its own Politeiaeased with v1.6.1 patch:
 
 - new gRPC method to set ticket [vote choice](https://github.com/decred/dcrwallet/pull/1981) at the associated VSP via the new vspd protocol (used by Decrediton)
 - when the account only has a single output, create an extra transaction to make enough [outputs](https://github.com/decred/dcrwallet/pull/1980) for a VSP ticket purchase, and use the resulting [fee](https://github.com/decred/dcrwallet/pull/2005) output (fixes the "not enough utxos" [error](https://www.reddit.com/r/decred/comments/lebx71/error_when_trying_to_purchase_tickets_with/))
@@ -356,15 +357,15 @@ Selected Twitter discussions:
 
 ## Markets
 
-In February DCR was trading between USD {n.dd}-{n.dd} / BTC {n.ddddd}-{n.ddddd}. The average daily rate was ${n.dd}.
+In February DCR was trading between USD 66.95-169.9 / BTC 0.00186-0.0030. The average daily rate was $113.76.
 
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
 
-https://twitter.com/marco_peereboom/status/1357126633812070403
+https://twitter.com/marco_peereboom/status/1357126633812070403 {Gone?}
 
-https://twitter.com/_Checkmatey_/status/1358968202898755584
+https://twitter.com/_Checkmatey_/status/1358968202898755584 {Gone?}
 
-https://twitter.com/_Checkmatey_/status/1363709306885922826
+https://twitter.com/_Checkmatey_/status/1363709306885922826 {Gone?}
 
 { dcrdex updates, esp. volume }
 
