--- a/journal/202102.md
+++ b/journal/202102.md
@@ -122,7 +122,7 @@ Patch v0.1.5 has been released to fix a few rough edges:
 
 - handle orders that somehow [lose](https://github.com/decred/dcrdex/pull/967) their funding coins
 - make client init and redeem requests [asynchronous](https://github.com/decred/dcrdex/pull/911) to not block actions that could occur in parallel
-- retry contract audits when [resuming](https://github.com/decred/dcrdex/pull/965) trades on startup and login, to prevent mathces from being incorrectly revoked
+- retry contract audits when [resuming](https://github.com/decred/dcrdex/pull/965) trades on startup and login, to prevent matches from being incorrectly revoked
 - blake2 dependency [updated](https://github.com/decred/dcrdex/pull/982) to prevent silent memory corruption
 
 Get the release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.6.1#dcrdex-v015), or grab [dcrinstall](https://github.com/decred/decred-release/releases) and run `dcrinstall --dcrdex` to download, verify and configure stuff automatically. [Verify](https://docs.decred.org/advanced/verifying-binaries/) the initial download though, to ensure it came unmodified.
@@ -131,7 +131,7 @@ Get the release notes and downloads [here](https://github.com/decred/decred-bina
 
 Merged in master towards the v0.2 release:
 
-- [estimate](https://github.com/decred/dcrdex/pull/958) low, high and max possible fees during swap and redemption transactions to offer some additional clarity on fees instead of just showing the worst-case value
+- [estimate](https://github.com/decred/dcrdex/pull/958) low, high, and max possible fees during swap and redemption transactions to offer some additional clarity on fees instead of just showing the worst-case value
 - write a [backup](https://github.com/decred/dcrdex/pull/949) file prior to upgrading the database
 - switch client from btcsuite's to Decred's [rpcclient](https://github.com/decred/dcrdex/pull/938) because the latter [supports](https://github.com/decred/dcrdex/issues/841) request cancellation
 - move wallet locking code during [shutdown](https://github.com/decred/dcrdex/pull/928) to a better place
@@ -201,7 +201,7 @@ Community stats as of Mar 1:
 
 Notable changes detected for the [tracked](https://github.com/decredcommunity/social-media-stats) accounts:
 
-- Twitter, Reddit and YouTube listed above all got a higher than usual increase in following and views
+- Twitter, Reddit, and YouTube listed above all got a higher than usual increase in following and views
 - [CoinMarketCap](https://coinmarketcap.com/currencies/decred/) page got another +3K watchers to 29K
 - [DecredKorea](https://twitter.com/DecredKorea) and [DecredNederland](https://twitter.com/DecredNederland) Twitter accounts have emerged in Jan and started tweeting in Korean and Dutch
 - [@Checkmate](https://twitter.com/_Checkmatey_) gained +30% followers (to 5K) and posted 1.2K tweets at a crazy rate of ~41/day
@@ -228,7 +228,7 @@ Politeia Digest [issue {}]({}) and [issue {}]({}) have more details on the month
 
 { section hint:
 
-- check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
+- check dcrdata.org (preferred), dcrstats.com, and charts.dcr.farm to get the numbers
 - use the same `zoom` parameter for all dcrdata links }
 
 Hashrate: February's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kkf13di6-kltwy2po&scale=linear&bin=block&axis=time) opened at ~428 Ph/s and closed ~420.5 Ph/s, bottoming at 277.7 Ph/s and peaking at 537 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of March 1: Poolin 42.9%, Antpool 41.72%, F2Pool 10.04%, Luxor 2.25%, BTC.com 1.91%, Huobipool 0.93%, Coinmine 0.104%, UUPool 0.034%.
@@ -239,7 +239,7 @@ UUPool seems to have had a drastic change in hash rate dropping from the top spo
 
 Staking: [30-day average](https://dcrstats.com/) ticket price was 181.73 DCR (+8.5). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kkem6zmo-klthqjiw&scale=linear&bin=window&axis=time&visibility=true-false) varied between 154.3-220.39 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kkcug5sb-klrpls2i&scale=linear&bin=false&axis=time&visibility=true-false) was 6.75-7.28 million DCR, which corresponded to 53.7-57.6% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=t1-t2&scale=linear&bin=block&axis=time) in PoS.
 
-It looks like we are breaking a record every month in terms of ticket price (220.39 DCR) and participation (57.6%). 
+It looks like we are breaking a record every month in terms of the ticket price (220.39 DCR) and participation (57.6%). 
 
 { hint: fallback link for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
@@ -373,7 +373,7 @@ https://twitter.com/_Checkmatey_/status/1363709306885922826 {Gone?}
 
 { cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
 
-Yearn Finance was February's largest DeFi [Fail](https://cryptobriefing.com/hacker-spends-8-3-million-fees-attack-yearn-finance/), with a flash loan attack exploiting its users for $11 million. In an interesting development for this kind of attack, most of the exploited funds were paid in [fees](https://twitter.com/FrankResearcher/status/1357639434380992512/photo/1) to various liquidity pools and staking services, with just $2.7 million ending up in the attacker's pocket, and the rest presumably fuelling the DeFi economy. The victims of the attack have been [compensated](https://twitter.com/iearnfinance/status/1359108691677614080?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1359108691677614080%7Ctwgr%5E%7Ctwcon%5Es1_c10&ref_url=https%3A%2F%2Fcointelegraph.com%2Fnews%2Fyearn-finance-puts-expanded-treasury-to-use-by-repaying-victims-of-11m-hack) from the new pool of Treasury funds that was recently minted - within 4 days of the hack the Yearn team were able to mobilize 9.7 million DAI to distribute, and no token voting was required. YFI and the Treasury are currently under direct control of the Multisig holders, and that "empowerment" is being [extended](https://gov.yearn.finance/t/yip-59-temporarily-extend-multisig-empowerment/9746) until May 24.
+Yearn Finance was February's largest DeFi [Fail](https://cryptobriefing.com/hacker-spends-8-3-million-fees-attack-yearn-finance/), with a flash loan attack exploiting its users for $11 million. In an interesting development for this kind of attack, most of the exploited funds were paid in [fees](https://twitter.com/FrankResearcher/status/1357639434380992512/photo/1) to various liquidity pools and staking services, with just $2.7 million ending up in the attacker's pocket, and the rest presumably fuelling the DeFi economy. The victims of the attack have been [compensated](https://twitter.com/iearnfinance/status/1359108691677614080?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1359108691677614080%7Ctwgr%5E%7Ctwcon%5Es1_c10&ref_url=https%3A%2F%2Fcointelegraph.com%2Fnews%2Fyearn-finance-puts-expanded-treasury-to-use-by-repaying-victims-of-11m-hack) from the new pool of Treasury funds that was recently minted - within 4 days of the hack the Yearn team were able to mobilize 9.7 million DAI to distribute, and no token voting was required. YFI and the Treasury are currently under the direct control of the Multisig holders, and that "empowerment" is being [extended](https://gov.yearn.finance/t/yip-59-temporarily-extend-multisig-empowerment/9746) until May 24.
 
 Yearn Finance is also [changing](https://gov.yearn.finance/t/yip-56-buyback-and-build/8929) up its Treasury and governance funding model [significantly](https://gov.yearn.finance/t/yip-56-buyback-and-build/8929), major changes include scrapping YFI staking because of its uncompetitive yield and instead switching to a buyback model and allowing YFI holders who have deployed their tokens in a liquidity pool to also use them to vote. 
 
