--- a/journal/202102.md
+++ b/journal/202102.md
@@ -20,7 +20,7 @@ https://github.com/decred/decred-binaries/releases/tag/v1.6.1
 
 ## Upcoming Consensus Change
 
-{ prepare to vote, set your prefs, dcrwallet }
+{ prepare to vote, set your vote choices for existing tickets and new tickets via dcrwallet|decrediton|legacy vsp }
 
 https://voting.decred.org/
 
@@ -253,6 +253,8 @@ Nodes: Throughout [February](https://charts.dcr.farm/d/000000014/nodes?orgId=1&f
 { any interesting analysis or events in the network }
 
 https://www.reddit.com/r/decred/comments/lj2her/og_ticket/gnj3zqq/ {Gone ?}
+
+{ add some numbers on vspd upgrade here or in Integ }
 
 ## Integrations
 
