--- a/journal/202102.md
+++ b/journal/202102.md
@@ -16,6 +16,8 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 { remind to verify }
 
+https://twitter.com/decredproject/status/1364636813168693252
+
 https://github.com/decred/decred-binaries/releases/tag/v1.6.1
 
 ## Upcoming Consensus Change
@@ -187,6 +189,8 @@ Other:
 
 Welcome to new first time contributors with code merged to master: @bochinchero ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=bochinchero)) and @fintechtrades ([dcrdocs](https://github.com/decred/dcrdocs/pull/1150))!
 
+@arij was interviewed on the Decred in Depth podcast, see [Media](#media).
+
 Community stats as of Mar 1:
 
 - [Twitter](https://twitter.com/decredproject) followers: 42,922 (+1,121)
@@ -203,17 +207,25 @@ Notable changes detected for the [tracked](https://github.com/decredcommunity/so
 - Twitter, Reddit, and YouTube listed above all got a higher than usual increase in following and views
 - [CoinMarketCap](https://coinmarketcap.com/currencies/decred/) page got another +3K watchers to 29K
 - [DecredKorea](https://twitter.com/DecredKorea) and [DecredNederland](https://twitter.com/DecredNederland) Twitter accounts have emerged in Jan and started tweeting in Korean and Dutch
+- [DecredDEX](https://twitter.com/DecredDEX) has joined [decredexplorer](https://twitter.com/decredexplorer) and now we have two Twitter accounts focused on specific projects
 - [@Checkmate](https://twitter.com/_Checkmatey_) gained +30% followers (to 5K) and posted 1.2K tweets at a crazy rate of ~41/day
 - [ConsensusRough](https://twitter.com/ConsensusRough) Twitter got +18% followers, to 438
+
+{ move this analysis to Outreach? }
 
 ## Governance
 
 In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 10,444 DCR and spent 3,010 DCR (actually payments didn't go out until Mar 2). Using February's daily average DCR/USD rate of $113.76, this is $1.2M received and $342K spent. At January's average daily rate of $54.25, the USD figure billed for past work is $163K. As of Mar 3, Treasury balance is 653,000 DCR (97.2 million USD at $148.86).
 
-After the record-breaking turnout for two proposals at the start of Feb (covered in the last issue), the rest of the month was relatively quiet, with two further proposals being approved.
+After the record-breaking turnout for two proposals at the start of Feb (covered in the [last issue](202101.md)), the rest of the month was relatively quiet, with two further proposals being approved.
 
 * The Decred Journal 2021 [proposal](https://proposals.decred.org/proposals/1d74b88) was approved with 92.4% Yes votes and turnout of 51%, thanks to all the stakeholders who voted for the Journal's first solo proposal! The amount of funding requested for the year is $39,000, and it also covers Politeia Digest and all of the associated Design work.
 * The Open Source Research 2021 proposal from @richard-red was approved with 75.4% Yes votes and turnout of 60% - the requested budget has increased to $40,000, and $9,150 of this is set aside for the expansion of @bee's open data collection initiative. 
+
+{ mention finished props briefly? }
+
+- thank you note https://twitter.com/in_insaf/status/1359255063580057602
+- rejected but record high turnout https://twitter.com/Ammarooni/status/1359352089714061313 + requesting honest feedback { twitter + mx contacts }
 
 { high level recap of decision-making activity and most important events }
 
@@ -238,7 +250,9 @@ UUPool seems to have had a drastic change in hash rate dropping from the top spo
 
 Staking: [30-day average](https://dcrstats.com/) ticket price was 181.73 DCR (+8.5). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kkem6zmo-klthqjiw&scale=linear&bin=window&axis=time&visibility=true-false) varied between 154.3-220.39 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kkcug5sb-klrpls2i&scale=linear&bin=false&axis=time&visibility=true-false) was 6.75-7.28 million DCR, which corresponded to 53.7-57.6% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=t1-t2&scale=linear&bin=block&axis=time) in PoS.
 
-It looks like we are breaking a record every month in terms of the ticket price (220.39 DCR) and participation (57.6%). 
+It looks like we are breaking a record every month in terms of the ticket price (220.39 DCR) and participation (57.6%).
+
+{ ath tweet https://twitter.com/michae2xl/status/1359609723541213186 }
 
 { hint: fallback link for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
@@ -255,6 +269,8 @@ Nodes: Throughout [February](https://charts.dcr.farm/d/000000014/nodes?orgId=1&f
 https://www.reddit.com/r/decred/comments/lj2her/og_ticket/gnj3zqq/ {Gone ?}
 
 { add some numbers on vspd upgrade here or in Integ }
+
+{ mixed % }
 
 ## Integrations
 
@@ -282,6 +298,8 @@ https://www.reddit.com/r/CryptoCurrency/comments/lqlone/decred_ama_ask_us_about_
 
 { #Decred5Years }
 
+@elima\_iii has started the second season of Decred in Depth series, featuring new guests and more community engagement. Questions to guests are collected [on Twitter](https://twitter.com/elima_iii/status/1363280047059132417) (even more for the [@matheusd](https://twitter.com/elima_iii/status/1365424755906670595) episode), video of bost host and guest is available and YouTube is the primary location now.
+
 Monde PR’s achievements for February:
 
 - Created/pitched three stories to finance and crypto publications
@@ -292,7 +310,8 @@ Monde PR’s achievements for February:
 
 Attended:
 
-- https://twitter.com/in_insaf/status/1358165155671113729
+- https://decredcommunity.github.io/events/index/20210203.1
+- https://decredcommunity.github.io/events/index/20210206.1
 
 { you know what pic to insert here! }
 
@@ -312,11 +331,12 @@ Upcoming:
 
 Selected articles:
 
-- {}
+- Decred v1.6 with co-founder & project lead, Jake Yocom-Piatt ([coinscrum.com](https://www.coinscrum.com/decred-with-jake-yocom-piatt/)) - a Jan video reworked into an article, compares the new treasury code to "minimally complex hardwired smart contact"
 
 Videos:
 
-- {}
+- Decred Privacy Tutorial: Mix Your Coins by @Exitus ([youtube](https://www.youtube.com/watch?v=QC65PBNwAK4))
+- Insaf Nori Interview Decred in Depth (live) by @elima\_iii ([youtube](https://www.youtube.com/watch?v=hUXk1GWhE-0))
 
 Audio:
 
@@ -324,6 +344,7 @@ Audio:
 
 Art and fun:
 
+- @karamble's Decred v1.6 digital [promo](https://twitter.com/karamblez/status/1356921573647745024) clip _(try spotting "taco"!)_
 - https://twitter.com/RichardRed0x/status/1356719226724220930
 - https://www.reddit.com/r/decred/comments/lfxqef/the_rewards/
 - https://twitter.com/LolekBolek74/status/1359866192538787843
@@ -354,6 +375,8 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
+- maybe https://twitter.com/_Checkmatey_/status/1357829662576054272
+- @behindtext keeps reminding [why](https://twitter.com/behindtext/status/1363118198749597698) we are still here
 - https://twitter.com/cburniske/status/1362146220123201536
 
 ## Markets
@@ -400,7 +423,7 @@ Taking KYC to the next level https://cointelegraph.com/news/dutch-bitcoin-exchan
 
 The US Federal Reserve experienced an [issue](https://www.theregister.com/2021/02/24/federal_reserve_outage/) with its inter-bank transfer system which impaired service for hours. This happened soon after US Treasury Secretary Janet Yellen had [warned](https://www.cnbc.com/2021/02/22/yellen-sounds-warning-about-extremely-inefficient-bitcoin.html) that Bitcoin is "extremely inefficient" and poses risk to investors.
 
-
+@notsofast urges everyone to learn from his [mistakes](https://cryptonews.com/news/trader-s-lesson-why-you-shouldn-t-keep-large-amounts-of-cry-9302.htm) that have led to losing ~$100,000 in crypto in a security breach: get a good password manager, use a hardware wallet, isolate dangerous browser extensions like Metamask in separate browser profiles or devices.
 
 ## About This Issue
 
