--- a/journal/202102.md
+++ b/journal/202102.md
@@ -310,16 +310,16 @@ Monde PR’s achievements for February:
 
 Attended:
 
-- https://decredcommunity.github.io/events/index/20210203.1
-- https://decredcommunity.github.io/events/index/20210206.1
+- Feb 3 - [Decred 5 Years Giveaway](https://decredcommunity.github.io/events/index/20210203.1) - Internet. Decred in Spanish team organized a sophisticated giveaway to mark Decred's 5th anniversary. A total of $130 in DCR was awarded for various tasks like retweets, answering questions (after digging some [dcrdata](https://explorer.dcrdata.org/)), answering "what do you like about Decred?", or competing in a meme contest. This activity engaged more than 60 people, generated over 57K Twitter impressions and onboarded 100+ Twitter followers and 40+ [Telegram](https://t.me/DecredES) users. Details in the [report](https://decredcommunity.github.io/events/index/20210203.1).
+- Feb 6 - [Blockchain, AI and Big Data](https://decredcommunity.github.io/events/index/20210206.1) - Casablanca, Morocco. @arij and OMJD organized an event to mark Decred's 5th anniversary. There were 3 talks on machine learning, big data and blockchains. In the latter, @arij talked about how Decred blockchain was used in Brazil municipal elections. 20 people were expected but 40 have showed up, and ~500 have watched the live. At the end there was a small celebration of the anniversary _(involving... hold on)_
+- Feb 9 - [Decred intro and features](https://decredcommunity.github.io/events/index/20210209.1) - Internet. @michae2xl was invited by Monnos (Brazilian exchange that listed DCR in [January](202101.md#integrations)) to introduce Decred in an Instagram livestream. Together with Rodrigo Soeiro (CEO) they have addressed new people in the space, showed Decred's products and discussed their potential.
+- Feb 20 - [Alternative Consensus: Let’s Talk PoS](https://decredcommunity.github.io/events/index/20210220.1) - Internet. @elian talked all things Decred with [Criptodemia](https://twitter.com/criptodemia) and [Kevin Negocios](https://twitter.com/KevinNegocios) from [Veinte Exchange](https://twitter.com/Veinte_ven) of Venezuela in a 1+ hour livestream.
 
 { you know what pic to insert here! }
 
 Upcoming:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
-
-{announcements in Events domain}
+- Mar 12-14 - [Hackathon Nayarit 2021](https://www.facebook.com/EduNayarit/posts/2982126628674008) - Internet. Decred in Spanish will sponsor the hackathon organized be the Ministry of Education of Nayarit. To prepare participants, the Spanish team hosted Blockchain Education training week, consisting of 5 webinars.
 
 ## Media
 
