--- a/journal/202102.md
+++ b/journal/202102.md
@@ -242,9 +242,13 @@ Politeia Digest [issue {}]({}) and [issue {}]({}) have more details on the month
 - check dcrdata.org (preferred), dcrstats.com, and charts.dcr.farm to get the numbers
 - use the same `zoom` parameter for all dcrdata links }
 
-Hashrate: February's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kkf13di6-kltwy2po&scale=linear&bin=block&axis=time) opened at ~428 Ph/s and closed ~420 Ph/s, bottoming at 278 Ph/s and peaking at 537 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of March 1: Poolin 36%, Antpool 34%, F2Pool 8%, Luxor 2%, BTC.com 1.5%, Huobipool 0.8%, Coinmine 0.08%, UUPool 0.03%.
+Hashrate: February's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kkf13di6-kltwy2po&scale=linear&bin=block&axis=time) opened at ~428 Ph/s and closed ~420 Ph/s, bottoming at 278 Ph/s and peaking at 537 Ph/s throughout the month.
 
-UUPool seems to have had a drastic change in hash rate dropping from the top spot to the bottom.
+Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of Mar 1: Poolin 36%, Antpool 34%, F2Pool 8%, Luxor 2%, BTC.com 1.5%, Huobipool 0.8%, Coinmine 0.08%, UUPool 0.03%, unknown 18%.
+
+Instant snapshots are too volatile, so compare that to how 1,000 blocks (3.5 days) mined before Mar 1 are distributed: Antpool 41%, Poolin 29%, easy2mine 11%, F2Pool 6%, Luxor 1.5%, Huobipool 0.4%, unknown 11%.
+
+UUPool's reported hashrate has dropped from the top spot to the bottom and it looks like its miners have migrated to Antpool and F2Pool. New unidentified addresses are also showing up.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
