--- a/journal/202102.md
+++ b/journal/202102.md
@@ -254,13 +254,9 @@ UUPool's reported hashrate has dropped from the top spot to the bottom and it lo
 
 Staking: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kkf13di6-kltwy2po&axis=time&visibility=true-true&mode=stepped) varied between 154.3-220.4 DCR, with 30-day [average](https://dcrstats.com/) at 181.7 DCR (+8.5). The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kkf13di6-kltwy2po&scale=linear&bin=block&axis=time) was 6.74-7.30 million DCR, meaning that 53.6-57.7% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kkf13di6-kltwy2po&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-It looks like we are breaking a record every month in terms of the ticket price (220.39 DCR) and participation (57.6%).
-
-{ ath tweet https://twitter.com/michae2xl/status/1359609723541213186 }
+It looks like we are [breaking](https://twitter.com/michae2xl/status/1359609723541213186) a record every month in terms of both ticket price and participation!
 
 { hint: fallback link for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
-
-{ recap of ticket price action if it was interesting }
 
 { hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
 
